# qxnm-forge

./: .gitignore  AGENTS.md  LICENSE  README.md
CONFORMANCE/: .gitignore  README.md  branch_compaction_runner.py  branch_compaction_validation.py  commercial_state_runner.py  executor_runner.py  hard_sandbox_runner.py  path_boundary_runner.py  pi_v3_import_runner.py  pi_v3_import_validation.py  provider_identity_runner.py  provider_image_runner.py  provider_mock.py  provider_route_runner.py  provider_runner.py  repository_data_validation.py  runner.py  schema_validation.py  session_lifecycle_runner.py  session_runner.py  session_tail_runner.py  session_validation.py  sponsored_catalog_runner.py  tool_runner.py  tool_validation.py  writer_lock_runner.py
CONFORMANCE/tests/: fake_daemon.py  fake_pi_v3_import_cli.py  fake_provider_batch2_daemon.py  fake_provider_batch3_daemon.py  fake_provider_daemon.py  test_runner.py  (+23 more)
SPEC/: README.md  agent-state-machine.md  architecture.md  capabilities.json  cli.md  compatibility.md  executor.md  language-profiles.json  models.v1.json  protocol.md  provider-commercial-state.md  provider-families.md  providers.v1.json  security.md  session.md  sponsored-provider-catalog.md  storage.md  ui.md
docs/: sponsored-provider-commercialization.md  verification.md
dotnet/: .gitignore  Directory.Build.props  QxnmForge.slnx  README.md
rust/: Cargo.toml  README.md
rust/src/: agent.rs  agent_profile.rs  commercial_state.rs  computer.rs  daemon.rs  domain.rs  error.rs  executor.rs  hard_sandbox.rs  lib.rs  main.rs  path_boundary.rs  policy.rs  protocol.rs  provider_catalog.rs  provider_connection.rs  provider_identity.rs  provider_route.rs  session.rs  session_lifecycle.rs  sponsored_catalog.rs  storage.rs  terminal.rs  tools.rs
rust/src/provider/: anthropic.rs  azure_responses.rs  bedrock.rs  codex_responses.rs  faux.rs  google.rs  mistral.rs  mod.rs  openai_chat.rs  openai_responses.rs  openrouter_images.rs  sse.rs  vertex.rs
rust/src/session/: legacy_session_v3_import.rs  pi_v3_import.rs  writer_lease.rs
rust/tests/: provider_catalog_rpc.rs  session_lifecycle_rpc.rs
rust/tests/fixtures/: dotnet-linear-session.jsonl
ui/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: application_service_bridge.rs  lib.rs  main.rs
(+283 files in other folders)
