[package]
name = "qxnm-forge-open-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "qxnm-forge 的独立 Rust Agent 底座实现"
license-file = "../LICENSE"
authors = ["高宏顺 <18272669457@163.com>"]
publish = false

[lib]
name = "qxnm_forge"
path = "src/lib.rs"

[[bin]]
name = "qxnm-forge"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
fs2 = "0.4"
getrandom = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
regex = "1"
ring = "0.17"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process", "fs", "term"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
