[package]
name = "agent-client-community-shell"
version = "0.1.0"
description = "QXNM Forge Community cross-platform UI shell"
authors = ["高宏顺 <18272669457@163.com>"]
edition = "2024"
publish = false

[lib]
name = "agent_client_community_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
